--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
             "name": "Alex Vipond",
             "email": "hello@alexvipond.dev"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^11.2"
+    }
 }
